--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,6 +17,7 @@
         android:theme="@style/Theme.Material3.Light.NoActionBar"
         tools:targetApi="31">
 
+        <!-- Activity Declarations -->
         <activity
             android:name=".SignUp"
             android:exported="false"
@@ -25,10 +25,11 @@
         <activity
             android:name=".ui.FareCollection"
             android:exported="true"
-            android:theme="@style/Theme.Material3.Light.NoActionBar"
-            />
-
-
+            android:theme="@style/Theme.Material3.Light.NoActionBar" />
+        <activity
+            android:name=".TransactionHistory"
+            android:exported="true"
+            android:theme="@style/Theme.Material3.Light.NoActionBar" />
         <activity
             android:name=".Login"
             android:exported="false"
@@ -40,7 +41,6 @@
             android:theme="@style/Theme.Material3.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
